# captains

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml
.devcontainer/: docker-compose.dev.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/workflows/: backend-ci.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: ai.py  docx_writer.py  main.py  sample_conversation.txt
backend/app/prompts/: effect.txt  extract.txt  issue.txt  plan.txt
backend/app/templates/: r1y2-1.docx  template.docx
backend/scripts/: build_template.py
docs/: backend-review-fixes.md  ci-setup.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
